fix: visibility needs to be hidden when filters are closed

--- a/components/ProductDirectory/Search/Filters/Filters.module.scss
+++ b/components/ProductDirectory/Search/Filters/Filters.module.scss
@@ -28,6 +28,7 @@
   right: 0;
   opacity: 0;
   transition: opacity 0.2s;
+  visibility: hidden;
 
   display: flex;
   flex-direction: column;
@@ -44,6 +45,7 @@
 
 .visible {
   opacity: 1;
+  visibility: visible;
 }
 
 .filter {
